# ConwayGameOfLife

./: README.md  conway-game-of-life.cabal  flake.nix  hie.yaml
app/: Main.hs
src/: Logic.hs  Main.hs
